--- a/0x02-react_intro/task_0/dashboard/package.json
+++ b/0x02-react_intro/task_0/dashboard/package.json
@@ -11,7 +11,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.6",
     "identity-obj-proxy": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -20,6 +19,7 @@
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@testing-library/dom": "^10.3.1",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -36,6 +36,8 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js",
       "^.+\\.(css|less|scss)$": "identity-obj-proxy"
     },
-    "testEnvironment": "jsdom"
+    "setupFilesAfterEnv": [
+        "./setupTests.js"
+    ]
   }
 }
