--- a/react_intro/task_2/dashboard/package.json
+++ b/react_intro/task_2/dashboard/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "identity-obj-proxy": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -38,7 +39,7 @@
       "^.+\\.(css|less|scss)$": "identity-obj-proxy"
     },
     "setupFilesAfterEnv": [
-        "./setupTests.js"
+      "./setupTests.js"
     ]
   }
 }
