--- a/react_props/task_2/dashboard/package.json
+++ b/react_props/task_2/dashboard/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "identity-obj-proxy": "^3.0.0",
+    "jsdom": "^25.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -31,6 +32,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "vite": "^5.3.1"
   },
@@ -38,7 +40,7 @@
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js",
-      "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+      "^.+\\.(css|less|scss)$":"identity-obj-proxy"
     },
     "setupFilesAfterEnv": [
       "./setupTests.js"
