--- a/react_hooks/task_4/dashboard/package.json
+++ b/react_hooks/task_4/dashboard/package.json
@@ -8,15 +8,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest",
+    "test": "jest ",
     "test-watch": "jest --watch"
   },
+
   "dependencies": {
+    "axios": "^1.7.9",
     "identity-obj-proxy": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+
   "devDependencies": {
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
@@ -33,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-axios": "^4.8.0",
     "vite": "^5.3.1"
   },
   "jest": {
