--- a/react_redux-part1/task_1/dashboard/package.json
+++ b/react_redux-part1/task_1/dashboard/package.json
@@ -8,15 +8,15 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest ",
+    "test-watch": "jest --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "aphrodite": "^2.4.0",
     "axios": "^1.7.9",
-    "axios-mock-adapter": "^2.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest-mock-axios": "^4.8.0",
-    "jsdom": "^25.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
@@ -24,8 +24,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
-    "@testing-library/dom": "^10.3.1",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/nightwatch": "^2.0.0",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.3",
@@ -35,8 +36,8 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-axios": "^4.8.0",
     "vite": "^5.3.1"
   },
   "jest": {
