--- a/Webpack/task_2/package.json
+++ b/Webpack/task_2/package.json
@@ -21,6 +21,6 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "styles-loader": "^4.0.1"
+    "style-loader": "^0.23.0"
   }
 }
