--- a/react_hooks/task_4/dashboard/package.json
+++ b/react_hooks/task_4/dashboard/package.json
@@ -11,15 +11,14 @@
     "test": "jest ",
     "test-watch": "jest --watch"
   },
-
   "dependencies": {
+    "aphrodite": "^2.4.0",
     "axios": "^1.7.9",
     "identity-obj-proxy": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-
   "devDependencies": {
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
