--- a/react_redux-part1/task_1/dashboard/package.json
+++ b/react_redux-part1/task_1/dashboard/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "aphrodite": "^2.4.0",
     "axios": "^1.7.9",
+    "axios-mock-adapter": "^2.1.0",
     "identity-obj-proxy": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
