--- a/react_styling/task_0/dashboard/package.json
+++ b/react_styling/task_0/dashboard/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fontsource/roboto": "^5.2.6",
     "@tailwindcss/vite": "^4.1.10",
+    "jsdom": "^25.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
