--- a/react_styling/task_0/dashboard/package.json
+++ b/react_styling/task_0/dashboard/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "install:browsers": "playwright install chromium-headless-shell"
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.6",
@@ -36,7 +37,8 @@
     "globals": "^15.12.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "@playwright/test": "^1.52.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
